remove OpenGLPolyglotHelper.c and render text with FTGL